--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -99,7 +99,7 @@ div.message-area {
   margin-top: 40px;
   height: 400px; /* 420 */
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
   /* background-color: aqua; */
 }
@@ -108,91 +108,58 @@ p.text-bubble {
   word-break: break-all;
   font-size: 12px;
   color: black;
+  &.user {
+    text-align: right;
+    clear: both;
+  }
+  &.bot {
+    text-align: left;
+    clear: none;
+  }
 }
 
-p.text-bubble.user {
-  text-align: right;
-  clear: both;
-}
-
-p.text-bubble.bot {
-  text-align: left;
-  clear: none;
-}
-
-span.text-cont {
+.text-cont {
   position: relative;
   line-height: 1.5em;
   display: inline-block;
   max-width: 80%;
+
   margin: 5px 10px 5px 10px;
   transition: floatup 0.5s forwards;
-}
 
-span.text-cont.user {
-  border-radius: 15px 15px 0px 15px;
-  padding: 10px;
-  background: #ffffff;
-}
-
-span.text-cont.bot {
-  border-radius: 15px 15px 15px 0px;
-  padding: 10px;
-  background: #adadad;
-}
-
-span.text-cont.bot.loading {
-  padding: 17px 30px 17px 30px !important;
-}
-
-.dot-flashing {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  /* transform: translate(-50%, -50%); */
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: #7900bf;
-  color: #be82ff;
-  animation: dot-flashing 1s infinite linear alternate;
-  animation-delay: 0.5s;
-}
-
-.dot-flashing::before,
-.dot-flashing::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 0;
-}
-.dot-flashing::before {
-  left: -15px;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: #7900bf;
-  color: #be82ff;
-  animation: dot-flashing 1s infinite alternate;
-  animation-delay: 0s;
-}
-.dot-flashing::after {
-  left: 15px;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: #7900bf;
-  color: #be82ff;
-  animation: dot-flashing 1s infinite alternate;
-  animation-delay: 1s;
-}
-
-@keyframes dot-flashing {
-  0% {
-    background-color: #7900bf;
+  &.user {
+    border-radius: 15px 15px 0px 15px;
+    padding: 10px;
+    background: #ffffff;
   }
-  50%,
-  100% {
-    background-color: rgba(230, 128, 255, 0.2);
+
+  &.bot {
+    border-radius: 15px 15px 15px 0px;
+    padding: 10px;
+    background: #adadad;
+  }
+}
+
+.loader {
+  display: inline-block;
+  width: 30px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
+  background: var(--_g) 0% 50%, var(--_g) 50% 50%, var(--_g) 100% 50%;
+  background-size: calc(100% / 3) 50%;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
   }
 }
