--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -117,9 +117,10 @@ div.first-layer {
   flex: 1;
   max-width: 0%;
   max-width: 100%;
-  a {
-    transition: all 0.5s ease-in-out;
-  }
+}
+
+p.intro-text, p.intro-text a {
+  transition: all 0.5s ease-in-out;
 }
 
 .fl-headshot-container:hover {
@@ -129,7 +130,6 @@ div.first-layer {
   }
 
   p {
-    transition: all 0.5s ease-in-out;
     color: #353535;
   }
 
